--- a/application.properties
+++ b/application.properties
@@ -3,11 +3,14 @@ notes_744.hostname = 127.0.0.1
 notes_744.port = 4002
 
 ##keycloak credentials
-notes_744.client-id=myNotes-app-client
-notes_744.client-secret=ZwcqVnkJy03JZmiLhXNLT5oWmi8TJ8f5
+notes_744.client-id=login-karavan
+notes_744.client-secret=mBvnKL0ltrTybKEfHzgrKMwaIt30RITW
 notes_744.grant-type=client_credentials
 notes_744.auth-grant-type=password
 notes_744.refresh_token=refresh_token
-notes_744.token-endpoint=localhost:8080/realms/notesApp/protocol/openid-connect/token
-notes_744.add-user-endpoint=localhost:8080/admin/realms/notesApp/users
-notes_744.introspect-token-endpoint=localhost:8080/realms/notesApp/protocol/openid-connect/token/introspect
+notes_744.token-endpoint=localhost:8087/realms/KaravanCloak/protocol/openid-connect/token
+notes_744.add-user-endpoint=localhost:8087/admin/realms/KaravanCloak/users
+notes_744.introspect-token-endpoint=localhost:8087/realms/KaravanCloak/protocol/openid-connect/token/introspect
+
+notes-service.hostname=127.0.0.1
+notes-service.database.port=3307
